--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,13 +1,39 @@
 .header{
     width: 100%;
-    height: 80px;
+    height: 500px;
     display: block;
     background-color: blue;
 }
+
 .inner_header{
-    width: 1000px;
-    height: 100%;
-    display: block;
-    margin: 0 auto;
-    background-color: red;
+    width: 100%;
+    margin: auto;
+    overflow: hidden;
+}
+.inner_header ul{
+    display: flex;
+    padding: 0;
+    width: 400%;
+
+    animation: cambio 26s infinite alternate linear;
+}
+
+.inner_header li{
+    width: 100%;
+    list-style: none;
+}
+
+.inner_header img{
+    width: 100%;
+}
+
+@keyframes cambio{
+    0%{margin-left: 0;}
+    20%{margin-left: 0;}
+    25%{margin-left: -100%;}
+    45%{margin-left: -100%;}
+    50%{margin-left: -200%;}
+    70%{margin-left: -200%;}
+    75%{margin-left: -300%;}
+    100%{margin-left: -300%;}
 }
